<resources>
    <string name="app_name">My Bot</string>


    //Splash Screen
    <string name="owner_by">Owner by</string>
    <string name="welcome">Welcome</string>
    <string name="creator">Creator</string>
    <string name="janani">Janani</string>

    //Login Screen
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    //Sign up Screen
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_sign_up_using">Or sign up using</string>

    //Dashboard Screen
    <string name="chat">Chat</string>
    <string name="scan">Scan</string>

    <string name="scanned_txt">Scanned Text</string>
    <string name="instruction">Instruction</string>

    //Logout Screen
    <string name="logout">Logout</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>


</resources>
