<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:behavior_hideable="true"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black" />

                    <ImageView
                        android:id="@+id/iv_close"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center|end"
                        android:layout_margin="@dimen/_5sdp"
                        android:contentDescription="close"
                        android:src="@drawable/ic_close" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="@dimen/_15sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/are_you_sure_want_to_logout"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/no"
                            android:id="@+id/btn_no"
                            android:textAllCaps="false"
                            app:cornerRadius="@dimen/_10sdp" />

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="0dp"
                            android:id="@+id/btn_yes"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/yes"
                            android:textAllCaps="false"
                            app:cornerRadius="@dimen/_10sdp" />


                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </FrameLayout>

</layout>