<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/Title_TextView"
                android:text="@string/sign_up"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/et_bg"
                    android:hint="@string/name"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColorHint="@color/light_blue"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/et_bg"
                    android:hint="@string/email"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColorHint="@color/light_blue"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/et_bg"
                    android:hint="@string/password"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColorHint="@color/light_blue"
                    android:textSize="@dimen/_12sdp" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/et_bg"
                    android:hint="@string/confirm_password"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColorHint="@color/light_blue"
                    android:textSize="@dimen/_12sdp" />


            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_tick_male"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:layout_gravity="end"
                        android:src="@drawable/ic_tick" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="Male"
                        android:textAllCaps="false"
                        app:cornerRadius="@dimen/_10sdp"
                        app:icon="@drawable/ic_male"
                        app:iconGravity="textStart"
                        app:iconSize="@dimen/_15sdp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_tick_female"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:layout_gravity="end"
                        android:visibility="gone"
                        android:src="@drawable/ic_tick" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="Female"
                        android:textAllCaps="false"
                        app:cornerRadius="@dimen/_10sdp"
                        app:icon="@drawable/ic_female"
                        app:iconGravity="textStart"
                        app:iconSize="@dimen/_15sdp" />

                </FrameLayout>
            </LinearLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                style="@style/fab_button"
                app:srcCompat="@drawable/ic_arrow_right" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Small_TextView"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:padding="@dimen/_2sdp"
                    android:text="Already have an account?" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Small_TextView"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/login"
                    android:textColor="@color/light_blue" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    style="@style/fab_button"
                    app:srcCompat="@drawable/ic_facebook" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    style="@style/fab_button"
                    app:srcCompat="@drawable/ic_google" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>