<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

        <variable
            name="forgotPasswordViewModel"
            type="com.bot.alvinbot.ui.forgot.ForgotPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.4"
                android:background="@drawable/main_bg" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_120sdp"
                        android:id="@+id/iv_logo"
                        android:layout_height="@dimen/_120sdp"
                        android:src="@drawable/logo_bot" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Title_TextView"
                        android:text="@string/forgot_password"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_username"
                        style="@style/TextInputLayout"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_username"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:background="@drawable/et_bg"
                            android:hint="@string/email"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:text="@={forgotPasswordViewModel.emailId}"
                            android:textColorHint="@color/light_blue"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_username_error"
                        isVisible="@{forgotPasswordViewModel.emailIdError}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="0dp"
                        android:gravity="start"
                        android:text="@={forgotPasswordViewModel.emailIdError}"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_9sdp"
                        android:visibility="gone" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/Small_TextView"
                            android:layout_width="0dp"
                            android:layout_margin="0dp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:layout_weight="1.5"
                            android:gravity="end"
                            android:padding="@dimen/_2sdp"
                            android:text="Back to Login" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_login"
                            style="@style/Small_TextView"
                            android:layout_width="0dp"
                            android:layout_margin="0dp"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:onClick="@{(v)->listener.onClick(v)}"
                            android:padding="@dimen/_2sdp"
                            android:text="@string/login"
                            android:textColor="@color/light_blue" />

                    </LinearLayout>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_login"
                        style="@style/fab_button"
                        android:onClick="@{() -> forgotPasswordViewModel.validation()}"
                        app:srcCompat="@drawable/ic_arrow_right" />


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </FrameLayout>

    </LinearLayout>
</layout>
